# cpumem-applet

./: Makefile.am  TODO  configure.ac
data/: Makefile.am  status_area_cpumem_applet.desktop
debian/: changelog  changelog.old  control  copyright  rules
src/: Makefile.am  cpumem_status_area_item.c  cpumem_status_area_item.h
