hildondesktoplib_LTLIBRARIES= \
	status_area_cpumem_applet.la
	
status_area_cpumem_applet_la_CPPFLAGS = \
        $(CPUMEM_APPLET_CFLAGS)

status_area_cpumem_applet_la_LDFLAGS = \
        -module -avoid-version

status_area_cpumem_applet_la_LIBADD = \
        $(CPUMEM_APPLET_LIBS)
		
status_area_cpumem_applet_la_SOURCES = \
	cpumem_status_area_item.c \
	cpumem_status_area_item.h
